src/test/ui/feature-gates/feature-gate-fn_align.stderr
error[E0658]: the attribute `repr(align(...))` on functions is unstable
  --> $DIR/feature-gate-fn_align.rs:3:8
   |
LL | #[repr(align(16))]
   |        ^^^^^^^^^
   |
   = note: see issue #82232 <https://github.com/rust-lang/rust/issues/82232> for more information
   = help: add `#![feature(fn_align)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
