src/test/ui/feature-gates/feature-gate-fn_align.rs
#![crate_type = "lib"]

#[repr(align(16))] //~ ERROR the attribute `repr(align(...))` on functions is unstable
fn requires_alignment() {}
